# procur-algorithm

./: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  API_README.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_README.md  COMPREHENSIVE_FIX_SUMMARY.md  DATABASE_README.md  DESIGN_SYSTEM.md  EVENT_BUS_IMPLEMENTATION_SUMMARY.md  EVENT_BUS_README.md  FINAL_REGRESSION_FIXES.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_BACKEND_INTEGRATION_PLAN.md  HOW_TO_SEE_AI_NEGOTIATE.md  HOW_TO_TEST_VENDOR_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS_IMPLEMENTATION_SUMMARY.md  INTEGRATIONS_README.md  INTEGRATION_ROADMAP.md  INTEGRATION_SUMMARY.md  LOGIN_DEBUG_GUIDE.md  LOGIN_FIX_SUMMARY.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_README.md  OPERATIONAL_SETUP.md  PERSISTENCE_QUICKSTART.md  PORTFOLIO_TESTING_GUIDE.md  QUICKSTART_AI_NEGOTIATION.md  QUICK_START.md  QUICK_START_REAL_NEGOTIATIONS.md  README.md  REGRESSION_FIXES_SUMMARY.md  SELLER_AGENT_IMPLEMENTATION_SUMMARY.md  SELLER_AGENT_README.md  TESTING_GUIDE.md  TEST_SOURCING_FLOW.sh  VENDOR_DATA_INTEGRATION.md  WIRING_COMPLETE.md  (+6 more)
alembic/: env.py
alembic/versions/: 1a4aa556ba91_add_outcome_columns_to_negotiations.py  20250930_052_initial_schema.py  c1b4bdad2f62_align_negotiation_sessions_schema.py
assets/: seeds.json
docs/: AI_NEGOTIATION_IMPLEMENTATION.md  architecture.md  llm_integration.md  negotiation_protocol.md  state_machines.md
examples/: advanced_seller_example.py  api_usage_example.py  buyer_demo.py  database_usage_example.py  event_bus_example.py  integrations_example.py  observability_example.py  pipeline_demo.py  test_g2_scraper.py
frontend/: .eslintrc.json  FRONTEND_IMPLEMENTATION.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
monitoring/: prometheus.yml
schemas/: negotiation_message.schema.json
scripts/: create_migration.sh  generate_migration.py  init_db.py  init_platform.sh  quickstart.sh  seed_all.sh  seed_demo_data.py  seed_vendors.py  setup_database.sh  setup_postgres.sh  start_flower.sh  start_monitoring.sh  start_workers.sh
src/procur/: __init__.py
src/procur.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_evaluation.py  test_input_sanitization.py  test_negotiation_logic.py  test_pricing_normalization.py
tests/integration/: test_api_flows.py  (+1 more)
(+209 files in other folders)
