[project]
name = "procur"
version = "0.1.0"
description = "Agent-as-a-Service procurement automation platform"
authors = [
    {name = "Procur Team", email = "team@procur.ai"}
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "typing-extensions>=4.9",
  "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "rich>=13.7"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
