[project]
name = "procur"
version = "0.1.0"
description = "Agent-as-a-Service procurement automation platform"
authors = [
    {name = "Procur Team", email = "team@procur.ai"}
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "typing-extensions>=4.9",
  "openai>=1.0",
  "httpx>=0.25.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "pdfkit>=1.0.0",
  "beautifulsoup4>=4.12",
  "streamlit>=1.31",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.6",
  "slowapi>=0.1.9",
  "pyotp>=2.9",
  "qrcode>=7.4",
  "authlib>=1.3",
  "itsdangerous>=2.1",
  "redis>=5.0",
  "celery>=5.3",
  "kombu>=5.3",
  "flower>=2.0",
  "slack-sdk>=3.26",
  "docusign-esign>=3.25",
  "sendgrid>=6.11",
  "boto3>=1.34",
  "stripe>=7.0",
  "google-api-python-client>=2.108",
  "google-auth>=2.25",
  "msal>=1.26",
  "okta>=2.9",
  "slack-sdk>=3.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "rich>=13.7", "pytest-asyncio>=0.21"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
